Phase 6 unversioned files edits